[package]
authors = ["Sampo Kivistö, havunen"]
description = "Rs Html Parser console app"
documentation = "https://github.com/Havunen/rs_html_parser"
edition = "2021"
license = "MIT"
name = "console_bench"
repository = "https://github.com/Havunen/rs_html_parser.git"
version = "0.0.6"
private = true

[[bin]]
name = "console_bench"
path = "src/lib.rs"

[lib]
bench = true

[dependencies]
rs_html_parser = { path = "../rs_html_parser" }
rs_html_parser_tokens = { path = "../rs_html_parser_tokens" }
rs_html_parser_tokenizer_tokens = { path = "../rs_html_parser_tokenizer_tokens" }
rs_html_parser_tokenizer = { path = "../rs_html_parser_tokenizer" }

[dev-dependencies]
insta = { version = "1.34.0" }
