[package]
authors       = ["Sampo Kivistö, havunen"]
description   = "Rs Html Parser"
documentation = "https://github.com/Havunen/rs_html_parser"
edition       = "2021"
license       = "MIT"
name          = "rs_html_parser"
repository    = "https://github.com/Havunen/rs_html_parser.git"
version       = "0.0.1"

[lib]
bench = false

[dependencies]
rs_html_parser_tokens = { path = "../rs_html_parser_tokens" }
rs_html_parser_tokenizer_tokens = { path = "../rs_html_parser_tokenizer_tokens" }
rs_html_parser_tokenizer = { path = "../rs_html_parser_tokenizer" }
regex = "1.10.2"
phf = { version = "0.11", default-features = false, features = ["macros"] }
phf_codegen = { version = "0.11.2", default-features = false }
lazy_static = "1.4.0"

[dev-dependencies]
insta = {version = "1.34.0"}

