[package]
authors       = ["Sampo Kivistö, havunen"]
description   = "Rs Html Parser"
documentation = "https://github.com/Havunen/rs_html_parser"
edition       = "2021"
license       = "MIT"
name          = "rs_html_parser"
repository    = "https://github.com/Havunen/rs_html_parser.git"
version       = "0.0.9"

[lib]
bench = true

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
rs_html_parser_tokens = { path = "../rs_html_parser_tokens", version = "0.0.8" }
rs_html_parser_tokenizer_tokens = { path = "../rs_html_parser_tokenizer_tokens", version = "0.0.6" }
rs_html_parser_tokenizer = { path = "../rs_html_parser_tokenizer", version = "0.0.9" }
regex = "1.10.2"
lazy_static = "1.4.0"
criterion = "0.5.1"
unicase = "2.7.0"
unicase_collections = "0.3.0"

[dev-dependencies]
insta = {version = "1.34.0"}

