[package]
authors       = ["Sampo Kivistö, havunen"]
description   = "Rs Html Parser Tokenizer"
documentation = "https://github.com/Havunen/rsparser"
edition       = "2021"
license       = "MIT"
name          = "rsparser_tokenizer"
repository    = "https://github.com/Havunen/rsparser.git"
version       = "0.0.1"

[lib]
bench = false
