[package]
authors       = ["Sampo Kivistö, havunen"]
description   = "Rs Html Parser Tokenizer"
documentation = "https://github.com/Havunen/rs_html_parser"
edition       = "2021"
license       = "MIT"
name          = "rs_html_parser_tokenizer"
repository    = "https://github.com/Havunen/rs_html_parser.git"
version       = "0.0.10"

[lib]
bench = false

[dependencies]
rs_html_parser_tokenizer_tokens = { path = "../rs_html_parser_tokenizer_tokens", version = "0.0.6" }
htmlize = { version = "1.0.3", features = ["unescape_fast"] }

[dev-dependencies]
insta = {version = "1.34.0"}

