[package]
authors       = ["Sampo Kivistö, havunen"]
description   = "Rs Html Parser Tokens"
documentation = "https://github.com/Havunen/rs_html_parser"
edition       = "2021"
license       = "MIT"
name          = "rs_html_parser_tokenizer_tokens"
repository    = "https://github.com/Havunen/rs_html_parser.git"
version       = "0.0.5"

[lib]
bench = false
