[package]
authors       = ["Sampo Kivistö, havunen"]
description   = "Rs Html Parser Nodes"
documentation = "https://github.com/Havunen/rs_html_parser"
edition       = "2021"
license       = "MIT"
name          = "rs_html_parser_tokens"
repository    = "https://github.com/Havunen/rs_html_parser.git"
version       = "0.0.1"

[lib]
bench = false

[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
rs_html_parser_tokenizer_tokens = { path = "../rs_html_parser_tokenizer_tokens" }
unicase = "2.7.0"
